<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Dazzle</string>
    
    <!-- Widget names. -->
    <string name="widget_11_name">Dazzle (1x1)</string>
    <string name="widget_21_name">Dazzle (2x1)</string>
    <string name="widget_31_name">Dazzle (3x1)</string>
    <string name="widget_41_name">Dazzle (4x1)</string>
        
    <!-- Preferences. -->
    <string name="prefs_help">Choose which controls you would like to have
in this widget.  Note that you can have multiple copies of the widget with
different controls.</string>
    <string name="prefs_enable_ringer">Ringer popup</string>
    <string name="prefs_ringer_summary">Show ring / silent / vibrate control
with popup mode selection</string>
    <string name="prefs_enable_otringer">Ringer one-touch</string>
    <string name="prefs_otringer_summary">Show ring / silent / vibrate control
with one-touch mode toggle</string>
    <string name="prefs_enable_radio">Cellular</string>
    <string name="prefs_radio_summary">Show data roaming/band control
(depending on device) (no indicator; takes you to the settings page.  Sorry,
but only system apps can directly control these settings)</string>
    <string name="prefs_enable_mobile_data">Mobile Data</string>
    <string name="prefs_mobile_data_summary">Enable/disable already established
mobile data (GRPS/EDGE/3G) connection. The widget tries to remember the setup
(experimental) and not interfere with the system controls.
Mobile data has to be turned on in system settings in order to use this switch.</string>
    <string name="prefs_phone_radio">Cellular Radio</string>
    <string name="prefs_phone_radio_summary">Turn phone cellular radio on/off.
Completely disables any phone-related functionality - calls,
mobile data - but greatly improves the battery life.</string>
    <string name="prefs_enable_wifi">WiFi</string>
    <string name="prefs_wifi_summary">Show WiFi control</string>
    <string name="prefs_enable_wifi_ap">WiFi Tethering</string>
    <string name="prefs_wifi_ap_summary">WiFi tethering on/off</string>
    <string name="prefs_wifi_ap_summary_froyo">WiFi tethering needs Android 2.2
or later</string>
    <string name="prefs_enable_bluetooth">Bluetooth</string>
    <string name="prefs_bluetooth_summary">Show Bluetooth control</string>
    <string name="prefs_bluetooth_summary_nobt">Show Bluetooth control -- needs
Android 2.0 or later</string>
    <string name="prefs_enable_gps">GPS</string>
    <string name="prefs_gps_summary">Enable/disable GPS Receiver</string>
    <string name="prefs_enable_airplane">Airplane mode</string>
    <string name="prefs_airplane_summary">Show airplane mode control</string>
    <string name="prefs_enable_sync">Sync</string>
    <string name="prefs_sync_summary">Show sync on/off control</string>
    <string name="prefs_sync_summary_nosync">Sync on/off control -- needs
Android 2.0 or later</string>
    <string name="prefs_auto_rotate">Auto-rotate screen</string>
    <string name="prefs_auto_rotate_summary">Enable/disable screen auto rotation</string>
    <string name="prefs_screen_always_on">Always on screen backlight</string>
    <string name="prefs_screen_always_on_summary">Keep the screen backlight
on</string>
    <string name="prefs_enable_brightness">Brightness popup</string>
    <string name="prefs_brightness_summary">Show screen brightness control
with popup mode selection</string>
    <string name="prefs_enable_otbrightness">Brightness one-touch</string>
    <string name="prefs_otbrightness_summary">Show screen brightness control
with one-touch mode toggle</string>
    <string name="prefs_enable_brightauto">Brightness/auto popup</string>
    <string name="prefs_brightauto_summary">Screen brightness control with
popup mode selection including auto mode; certain devices only</string>
    <string name="prefs_brightauto_summary_noauto">Screen brightness popup
with auto -- needs Android 2.0 or later</string>
    <string name="prefs_enable_otbrightauto">Brightness/auto one-touch</string>
    <string name="prefs_otbrightauto_summary">Screen brightness control with
one-touch mode toggle including auto mode; certain devices only</string>
    <string name="prefs_otbrightauto_summary_noauto">Screen brightness
one-touch with auto -- needs Android 2.0 or later</string>
    <string name="prefs_save">Save</string>

    <!-- Ringer button labels. -->
    <string name="ringer_max">Max</string>
    <string name="ringer_on">User</string>
    <string name="ringer_vibe">Vibe</string>
    <string name="ringer_silent">Off</string>

    <!-- Brightness button labels. -->
    <string name="button_low">Min</string>
    <string name="button_med">User</string>
    <string name="button_high">Max</string>
    <string name="button_auto">Auto</string>

    <!-- Errors. -->
    <string name="system_mobile_data_disabled">Mobile Data disabled in system settings</string>
    
    <!-- internal components -->
    <string name="int_obsrv_svc_name">Dazzle Settings Observer</string>
    <string name="int_obsrv_svc_desc">Service holding the system settings observers</string>
    
</resources>

