<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="horizontal">

	<Button android:id="@+id/button_low"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_low" />

	<Button android:id="@+id/button_med"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_med" />
			
	<Button android:id="@+id/button_high"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_high" />
			
	<Button android:id="@+id/button_auto"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_auto" />
			
</LinearLayout>

