<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">

	<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
        	android:layout_weight="1" >

<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">

	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
		<CheckBox android:id="@id/dazzle_wifi"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top" />
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical" >
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prefs_enable_wifi"
					android:textSize="20sp" />
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prefs_wifi_summary" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
		<CheckBox android:id="@id/dazzle_bluetooth"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top" />
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical" >
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prefs_enable_bluetooth"
					android:textSize="20sp" />
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prefs_bluetooth_summary" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
		<CheckBox android:id="@id/dazzle_gps"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top" />
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical" >
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prefs_enable_gps"
					android:textSize="20sp" />
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prefs_gps_summary" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
		<CheckBox android:id="@id/dazzle_airplane"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top" />
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical" >
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prefs_enable_airplane"
					android:textSize="20sp" />
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prefs_airplane_summary" />
		</LinearLayout>
	</LinearLayout>
	
	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
		<CheckBox android:id="@id/dazzle_brightness"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top" />
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical" >
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prefs_enable_brightness"
					android:textSize="20sp" />
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prefs_brightness_summary" />
		</LinearLayout>
	</LinearLayout>
			
	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
		<CheckBox android:id="@id/dazzle_brightauto"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="top" />
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical" >
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prefs_enable_brightauto"
					android:textSize="20sp" />
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prefs_brightauto_summary" />
		</LinearLayout>
	</LinearLayout>
		
</LinearLayout>

	</ScrollView>
		
	<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@android:style/ButtonBar" >

		<Button android:id="@+id/save_button"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
				android:text="@string/prefs_save" />

	</LinearLayout>
	
</LinearLayout>

